Isolate strict Liquid check into dedicated script
Refactored the strict Liquid rendering validation by moving it from a
slow Minitest test into a self-contained script. The previous
implementation required a full Jekyll site load for a single test,
making the `make test` command too slow for rapid local feedback. This
change isolates the time-consuming validation into
`_bin/check_strict.rb` and exposes it via a new `make check-strict`
command.

The main `_config.yml` is now configured with `error_mode: lax` by
default, allowing standard builds and local serving to function
correctly with external plugins that are not strict-compliant. The new
script programmatically overrides the configuration in memory to enforce
strict mode during its run, removing the need for a separate config
file. The CI pipeline now executes both the fast unit tests and this new
comprehensive strictness check, ensuring both code correctness and
content integrity.

Changes:
- Create new script `_bin/check_strict.rb` to enforce strict Liquid
  rendering.
- Add `check-strict` target to `Makefile` to run the new script.
- Update `_config.yml` to use `error_mode: lax` for default builds.
- Update GitHub Actions workflow to execute the new `check-strict` step.
- Delete the slow and now-redundant `_tests/test_strict_rendering.rb`
  file.

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -4,7 +4,7 @@ name: Test and Deploy Jekyll site to Pages
 on:
   # Runs on pushes to ANY branch
   push:
-  
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -38,6 +38,9 @@ jobs:
 
       - name: Run tests
         run: bundle exec ruby -I _plugins -I _tests -e "require 'test_helper'; Dir.glob('_tests/**/test_*.rb').each { |f| load f }"
+
+      - name: Check for strict Liquid errors
+        run: bundle exec ruby _bin/check_strict.rb
 
   # Build job
   build:
