Add Rakefile to parse coverage

--- a/_config.yml
+++ b/_config.yml
@@ -157,6 +157,7 @@ exclude:
     - LICENSE.md
     - Makefile
     - README.md
+    - Rakefile
     - _scripts
     - coverage
     - redirects.json
