Fix RuboCop linting issues in Rakefile
Fixed style violations in the Rakefile and updated RuboCop configuration
to exclude long blocks in Rakefiles.

Changes:
- Added frozen string literal comment to Rakefile.
- Changed `report.dig('files')` to `report['files']` for single argument
  dig.
- Replaced string concatenation with interpolation in file write.
- Added `Metrics/BlockLength` exclusion for Rakefile and tests in
  `.rubocop.yml`.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -63,6 +63,13 @@ Metrics/ParameterLists:
   Exclude:
     - '_tests/**/*'
 
+# Block Length
+# Tests and Rakefiles often have long blocks (setup, assertions, task definitions)
+Metrics/BlockLength:
+  Exclude:
+    - '_tests/**/*'
+    - 'Rakefile'
+
 # ------------------------------------------------------------------
 # 3. Layout & Formatting
 # ------------------------------------------------------------------
