Add CI validation for HTML structure and expand html-proofer checks
Adds a new CI step to catch broken layout chains by validating that all
HTML files start with <!DOCTYPE html> and contain no raw front matter.
This would have caught the recent page-not-on-sidebar.html corruption.

Also expands html-proofer to check Favicon and OpenGraph metadata, and
requires meaningful alt text on images.

Changes:
- Add "Validate HTML structure" step to CI workflow
- Add Favicon and OpenGraph to html-proofer checks
- Set ignore_empty_alt: false for stricter image validation

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -65,6 +65,23 @@ jobs:
         env:
           JEKYLL_ENV: production
 
+      - name: Validate HTML structure
+        run: |
+          echo "Checking for missing DOCTYPE declarations..."
+          missing_doctype=$(find _site -name '*.html' -exec sh -c 'head -1 "$1" | grep -qv "^<!DOCTYPE" && echo "$1"' _ {} \;)
+          if [ -n "$missing_doctype" ]; then
+            echo "ERROR: The following files are missing <!DOCTYPE html>:"
+            echo "$missing_doctype"
+            echo "This usually indicates a broken layout chain or corrupted front matter."
+            exit 1
+          fi
+          echo "Checking for raw front matter in output..."
+          if grep -rl "^---$" _site --include="*.html" 2>/dev/null; then
+            echo "ERROR: Raw front matter delimiters found in HTML output."
+            exit 1
+          fi
+          echo "All HTML structure checks passed."
+
       - name: Check for broken links
         run: bundle exec ruby _bin/check_links.rb
 
