Consolidate AI agent instructions into AGENTS.md
Rename CLAUDE.md to AGENTS.md and create symlinks so both Claude
and Gemini share the same instruction file. This provides a single
source of truth for all AI coding assistants.

Changes:
- Rename CLAUDE.md to AGENTS.md with the actual content.
- Create CLAUDE.md and GEMINI.md as symlinks to AGENTS.md.
- Update _config.yml to exclude the new files from the site build.

--- a/_config.yml
+++ b/_config.yml
@@ -149,17 +149,19 @@ compress_html:
 # Excluded files from site
 exclude:
     - .venv/
+    - AGENTS.md
     - CLAUDE.md
     - CNAME
     - Dockerfile
+    - GEMINI.md
     - Gemfile
     - Gemfile.lock
     - LICENSE.md
     - Makefile
     - README.md
     - Rakefile
-    - _scripts
     - _coverage
+    - _scripts
     - redirects.json
     - vendor
 
