Review infrastructure clusters 1-2 and fix gaps
Audit core utilities and text/URL plugins for test coverage
and config correctness.

Changes:
- Add BOOK_LIST_FAVORITES and UNREVIEWED_MENTIONS to _config.yml
  plugin_logging (were missing, causing silent logging failures).
- Remove dead plugin_logging entries from _config.yml (JSON_LD_REVIEW)
  and test_helper (ANY_TAG, AUTHOR_LINK_UTIL_ERROR, BOOK_CARD_GENERIC_ALT,
  BOOK_LINK_UTIL_ERROR).
- Add 4 tests to plugin_logger_utils: identifiers in output, nil page
  register, missing plugin_logging config, CGI escaping.
- Add 3 tests to text_processing_utils: non-string truncate_words input,
  bare article normalize_title, non-string format_list_as_sentence items.
- Add 1 test to tag_argument_utils: whitespace-padded quoted strings.

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ plugin_logging:
     BACKLINK_UTIL: true
     BOOK_BACKLINKS_TAG: true
     BOOK_CARD_LOOKUP: true
+    BOOK_LIST_FAVORITES: true
     BOOK_CARD_MISSING_AUTHORS: true
     BOOK_CARD_MISSING_EXCERPT: true
     BOOK_CARD_MISSING_IMAGE_PATH: true
@@ -52,6 +53,7 @@ plugin_logging:
     RENDER_SHORT_STORY_LINK: true
     UNITS_TAG_ERROR: true
     UNITS_TAG_WARNING: true
+    UNREVIEWED_MENTIONS: true
 
 # Dependencies
 plugins:
