Move display limits from magic numbers to _config.yml
Duplicate hardcoded limits across the HTML tags and the markdown
assembler caused a bug where the two pipelines could show different
numbers of related items (Issue #119). This centralizes all display
limits in _config.yml under a display_limits key, with Finders and
FeedUtils reading the config at runtime and falling back to hardcoded
defaults when config is absent.

This fixes #119.

Changes:
- Add display_limits section to _config.yml (related_books: 3,
  related_posts: 3, front_page_feed: 5).
- Books::Related::Finder and Posts::Related::Finder read from config
  when no explicit limit is passed, with DEFAULT_MAX constant fallback.
- FeedUtils reads display_limits.front_page_feed when limit is nil.
- Remove DEFAULT_MAX_BOOKS from RelatedBooksTag.
- Remove DEFAULT_MAX_POSTS from RelatedPostsTag.
- Remove DEFAULT_LIMIT from FrontPageFeedTag.
- Remove MAX_RELATED_BOOKS and MAX_RELATED_POSTS from assembler.
- Add config-driven limit tests for all three Finders.
- Update test constant references to point at Finder constants.

--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,13 @@ plugin_logging:
     UNITS_TAG_WARNING: true
     UNREVIEWED_MENTIONS: true
 
+# Display limits for related content and feeds.
+# These are read by Finders and FeedUtils; tags/assemblers defer to them.
+display_limits:
+    related_books: 3
+    related_posts: 3
+    front_page_feed: 5
+
 # Dependencies
 plugins:
     - jekyll-feed
